Added links in top of page and added opening behaviour

--- a/heuristiskenhed-accordion.html
+++ b/heuristiskenhed-accordion.html
@@ -82,9 +82,17 @@
                     <div
                       class="card-header d-flex align-items-center justify-content-between bg-light"
                     >
-                      <h5 class="mb-0">
-                        Kredsaflytningssystem
-                      </h5>
+                      <div class="scrollto">
+                        <a href="#collapseOne" class="mr-3">Detaljer</a>
+                        <a href="#collapseTwo" class="mr-3">HE Navne</a>
+                        <a href="#collapseTwo" class="mr-3">Tider</a>
+                        <a href="#collapseThree" class="mr-3">Arkivskaber</a>
+                        <a href="#collapseThree" class="mr-3">Referencer</a>
+                        <a href="#collapseFour" class="mr-3">Interne noter</a>
+                        <a href="#collapseFour" class="mr-3">Publikums noter</a>
+                        <a href="#collapseFive" class="mr-3">Afleveringsstatus</a>
+                        <a href="#collapseSix" class="mr-3">Arkiveringsversion</a>
+                      </div>
                       <button class="btn btn-primary float-right readonly edit">
                         Rediger
                       </button>
@@ -105,9 +113,9 @@
                               class="btn btn-link d-flex align-items-center"
                               type="button"
                               data-toggle="collapse"
-                              data-target="#multiCollapseExample1"
-                              aria-expanded="false"
-                              aria-controls="multiCollapseExample1"
+                              data-target="#collapseOne"
+                              aria-expanded="true"
+                              aria-controls="collapseOne"
                             >
                               <svg
                                 class="icon mr-2"
@@ -128,7 +136,7 @@
                           </div>
                           <div
                             class="collapse show multi-collapse"
-                            id="multiCollapseExample1"
+                            id="collapseOne"
                           >
                             <div class="card-body">
                               <div class="row">
@@ -342,12 +350,12 @@
                         <div class="card">
                           <div class="p-lg-2 bg-light" id="headingTwo">
                             <button
-                              class="btn btn-link collapsed d-flex align-items-center"
+                              class="btn btn-link d-flex align-items-center"
                               type="button"
                               data-toggle="collapse"
-                              data-target="#multiCollapseExample2"
+                              data-target="#collapseTwo"
                               aria-expanded="false"
-                              aria-controls="multiCollapseExample2"
+                              aria-controls="collapseTwo"
                             >
                               <svg
                                 class="icon mr-2"
@@ -367,8 +375,8 @@
                             </button>
                           </div>
                           <div
-                            class="collapse multi-collapse"
-                            id="multiCollapseExample2"
+                            class="collapse show multi-collapse"
+                            id="collapseTwo"
                           >
                             <div class="card-body">
                               <div class="row mt-3 mb-3">
