Added first batch of changes to narrow design

--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -14,7 +14,7 @@
 
   <body class="bg-light">
     <div class="container-fluid">
-      <div class="col-sm-10 col-centered">
+      <div class="col-sm-12 col-centered">
         <nav class="navbar navbar-expand-lg navbar-white">
           <a class="navbar-brand" href="/index.html">
             <svg
@@ -60,17 +60,16 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-10 col-centered">
+        <div class="col-12 col-centered">
           <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
             <div class="card-body">
               <a href="/search/search-arkivskaber.html" class="d-flex mb-4"
                 >« Tilbage</a
               >
-              <span class="badge badge-purple badge-pill mt-2 mb-4"
+              <h5 class="text-secondary">Frederiksberg Politi               <span class="badge badge-purple badge-pill ml-2"
                 >Arkivskaber</span
-              >
-              <h3 class="text-secondary">Frederiksberg Politi</h3>
-              <h1 class="mb-5 font-weight-bold">Ordenspolitiet, 1919 - 2006</h1>
+              ></h5>
+              <h3 class="mb-4 font-weight-bold">Ordenspolitiet, 1919 - 2006</h3>
               <ul class="nav nav-tabs">
                 <li class="nav-item">
                   <a
@@ -160,9 +159,9 @@
                         <div
                           class="card-header d-flex align-items-center justify-content-between"
                         >
-                          <h5 class="mb-0">
+                          <h6 class="mb-0">
                             Beskrivelse
-                          </h5>
+                          </h6>
                           <button
                             class="btn btn-primary float-right readonly edit"
                           >
@@ -179,7 +178,7 @@
                         </div>
 
                         <div class="card-body p-lg-3">
-                          <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                          <h5 class="font-weight-bold mt-3 ml-3 mb-3">
                             <div class="d-flex align-items-center">
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -195,8 +194,8 @@
                               </svg>
                               <span class="ml-3">Detaljer</span>
                             </div>
-                          </h4>
-                          <ul class="list-group mb-5 w-50 mr-3 ml-3">
+                          </h5>
+                          <ul class="list-group mb-3 w-50 mr-3 ml-3">
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
@@ -337,7 +336,7 @@
                           <div
                             class="d-flex align-items-center justify-content-between mr-3 ml-1"
                           >
-                            <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                            <h5 class="font-weight-bold mt-3 ml-3 mb-3">
                               <div class="d-flex align-items-center">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
@@ -353,14 +352,14 @@
                                 </svg>
                                 <span class="ml-3">Navne</span>
                               </div>
-                            </h4>
+                            </h5>
                           </div>
                           <div class="card bg-white ml-3 mr-3">
                             <div class="card-body p-0 m-0">
                               <table
                                 id="navne-tabel"
                                 width="100%"
-                                class="table table-hover sorting table-striped mb-0"
+                                class="table sorting table-hover table-striped mb-0 compact"
                               >
                                 <thead>
                                   <tr>
@@ -484,9 +483,9 @@
                             </svg>
                             <span>Tilføj navn</span>
                           </button>
-                          <div class="row mt-5">
+                          <div class="row mt-3">
                             <div class="col-sm-6">
-                              <h4 class="font-weight-bold mt-3 ml-3 mb-3">
+                              <h5 class="font-weight-bold mt-3 ml-3 mb-3">
                                 <div class="d-flex align-items-center">
                                   <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -502,7 +501,7 @@
                                   </svg>
                                   <span class="ml-3">Interne noter</span>
                                 </div>
-                              </h4>
+                              </h5>
                               <div class="card ml-3 mr-3">
                                 <div class="card-body">
                                   <p class="ml-3 mr-3 readonly">
@@ -547,7 +546,7 @@ of Lorem Ipsum.
                               </div>
                             </div>
                             <div class="col-sm-6">
-                              <h4 class="font-weight-bold mt-3 ml-3 mb-3">
+                              <h5 class="font-weight-bold mt-3 ml-3 mb-3">
                                 <div class="d-flex align-items-center">
                                   <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -563,7 +562,7 @@ of Lorem Ipsum.
                                   </svg>
                                   <span class="ml-3">Publikums noter</span>
                                 </div>
-                              </h4>
+                              </h5>
                               <div class="card ml-3 mr-3">
                                 <div class="card-body">
                                   <p class="ml-3 mr-3 readonly">
@@ -650,7 +649,7 @@ of Lorem Ipsum.
                             <div class="card-body p-0 m-0">
                               <table
                                 id="overordnedeaktoerer-tabel"
-                                class="table sorting table-hover table-striped mb-0"
+                                class="table sorting table-hover table-striped mb-0 compact"
                                 width="100%"
                               >
                                 <thead>
@@ -800,7 +799,7 @@ of Lorem Ipsum.
                           <div class="card">
                             <table
                               id="underordnedeaktoerer-tabel"
-                              class="table sorting table-hover table-striped mb-0"
+                              class="table sorting table-hover table-striped mb-0 compact"
                               width="100%"
                             >
                               <thead>
@@ -1079,7 +1078,7 @@ of Lorem Ipsum.
                             <div class="card">
                               <table
                                 id="heuristiskeenheder-tabel"
-                                class="table sorting table-hover table-striped mb-0"
+                                class="table sorting table-hover table-striped mb-0 compact"
                                 width="100%"
                               >
                                 <thead>
@@ -1199,7 +1198,7 @@ of Lorem Ipsum.
                             <div class="card">
                               <table
                                 id="proveniensnr-tabel"
-                                class="table sorting table-hover table-striped mb-0"
+                                class="table sorting table-hover table-striped mb-0 compact"
                                 width="100%"
                               >
                                 <thead>
@@ -1243,7 +1242,7 @@ of Lorem Ipsum.
                             <div class="card">
                               <table
                                 id="henvisning-tabel"
-                                class="table sorting table-hover table-striped mb-0"
+                                class="table sorting table-hover table-striped mb-0 compact"
                                 width="100%"
                               >
                                 <thead>
@@ -1367,7 +1366,7 @@ of Lorem Ipsum.
                             <div class="card">
                               <table
                                 id="andenarkivalie-tabel"
-                                class="table sorting table-hover table-striped mb-0"
+                                class="table sorting table-hover table-striped mb-0 compact"
                                 width="100%"
                               >
                                 <thead>
@@ -1797,7 +1796,7 @@ of Lorem Ipsum.
                   <table
                     id="tilknyt-overordnede"
                     width="100%"
-                    class="table sorting table-hover table-striped mb-0"
+                    class="table sorting table-hover table-striped mb-0 compact"
                   >
                     <thead>
                       <tr>
@@ -1968,7 +1967,7 @@ of Lorem Ipsum.
                   <table
                     id="tilknyt-underordnede"
                     width="100%"
-                    class="table sorting table-hover table-striped mb-0"
+                    class="table sorting table-hover table-striped mb-0 compact"
                   >
                     <thead>
                       <tr>
