--- a/heuristiskenhed-accordion.html
+++ b/heuristiskenhed-accordion.html
@@ -66,15 +66,14 @@
               <a href="/search/search-heuristiskenhed.html" class="d-flex mb-4"
                 >« Tilbage</a
               >
-              <span class="badge badge-info badge-pill mt-2 mb-4"
+              <h5 class="text-secondary">
+                Frederiksberg Politi               <span class="badge badge-info badge-pill ml-2"
                 >Heuristisk Enhed</span
               >
-              <h3 class="text-secondary">
-                Frederiksberg Politi
-              </h3>
-              <h1 class="font-weight-bold mb-5">
+              </h5>
+              <h3 class="font-weight-bold mb-5">
                 Kredsaflytningssystem, 1950 - 1975
-              </h1>
+              </h3>
 
               <div class="container-fluid">
                 <div class="row mb-3 mt-3">
@@ -141,7 +140,7 @@
                             <div class="card-body">
                               <div class="row">
                                 <div class="col-sm-6">
-                                  <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                                  <h5 class="font-weight-bold mt-3 ml-3 mb-4">
                                     <div class="d-flex align-items-center">
                                       <svg
                                         xmlns="http://www.w3.org/2000/svg"
@@ -157,8 +156,8 @@
                                       </svg>
                                       <span class="ml-3">Detaljer</span>
                                     </div>
-                                  </h4>
-                                  <ul class="list-group mb-5 mr-3 ml-3">
+                                  </h5>
+                                  <ul class="list-group mb-0 mr-3 ml-3">
                                     <li class="list-group-item">
                                       <div
                                         class="row d-flex align-items-center"
@@ -268,7 +267,7 @@
                                   </ul>
                                 </div>
                                 <div class="col-sm-6 mt-6">
-                                  <ul class="list-group mb-5 mr-3 ml-3">
+                                  <ul class="list-group mb-3 mr-3 ml-3">
                                     <li class="list-group-item">
                                       <div
                                         class="row d-flex align-items-center"
@@ -384,7 +383,7 @@
                                   <div
                                     class="d-flex align-items-center justify-content-between mr-3 ml-1"
                                   >
-                                    <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                                    <h5 class="font-weight-bold mt-0 ml-3 mb-3">
                                       <div class="d-flex align-items-center">
                                         <svg
                                           xmlns="http://www.w3.org/2000/svg"
@@ -400,14 +399,14 @@
                                         </svg>
                                         <span class="ml-3">HE-Navne</span>
                                       </div>
-                                    </h4>
+                                    </h5>
                                   </div>
                                   <div class="card bg-white ml-3 mr-3">
                                     <div class="card-body p-0 m-0">
                                       <table
                                         id="henavne-tabel"
                                         width="100%"
-                                        class="table sorting table-striped table-hover mb-0"
+                                        class="table sorting table-striped table-hover compact mb-0"
                                       >
                                         <thead>
                                           <tr>
@@ -588,7 +587,7 @@
                                   <div
                                     class="d-flex align-items-center justify-content-between mr-3 ml-1"
                                   >
-                                    <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                                    <h5 class="font-weight-bold mt-0 ml-3 mb-3">
                                       <div class="d-flex align-items-center">
                                         <svg
                                           xmlns="http://www.w3.org/2000/svg"
@@ -604,14 +603,14 @@
                                         </svg>
                                         <span class="ml-3">Tider</span>
                                       </div>
-                                    </h4>
+                                    </h5>
                                   </div>
                                   <div class="card bg-white ml-3 mr-3">
                                     <div class="card-body p-0 m-0">
                                       <table
                                         id="tider-tabel"
                                         width="100%"
-                                        class="table sorting table-striped table-hover mb-0"
+                                        class="table sorting table-striped table-hover compact mb-0"
                                       >
                                         <thead>
                                           <tr>
@@ -767,7 +766,7 @@
                                   <div
                                     class="d-flex align-items-center justify-content-between mr-3 ml-1"
                                   >
-                                    <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                                    <h5 class="font-weight-bold mt-0 ml-3 mb-3">
                                       <div class="d-flex align-items-center">
                                         <svg
                                           xmlns="http://www.w3.org/2000/svg"
@@ -783,14 +782,14 @@
                                         </svg>
                                         <span class="ml-3">Arkivskaber</span>
                                       </div>
-                                    </h4>
+                                    </h5>
                                   </div>
                                   <div class="card bg-white ml-3 mr-3">
                                     <div class="card-body p-0 m-0">
                                       <table
                                         id="arkivskaber-tabel"
                                         width="100%"
-                                        class="table sorting table-striped table-hover mb-0"
+                                        class="table sorting table-striped compact table-hover mb-0"
                                       >
                                         <thead>
                                           <tr>
@@ -992,7 +991,7 @@
                                   <div
                                     class="d-flex align-items-center justify-content-between mr-3 ml-1"
                                   >
-                                    <h4 class="font-weight-bold mt-3 ml-3 mb-4">
+                                    <h5 class="font-weight-bold mt-0 ml-3 mb-3">
                                       <div class="d-flex align-items-center">
                                         <svg
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1008,14 +1007,14 @@
                                         </svg>
                                         <span class="ml-3">Referencer</span>
                                       </div>
-                                    </h4>
+                                    </h5>
                                   </div>
                                   <div class="card bg-white ml-3 mr-3">
                                     <div class="card-body p-0 m-0">
                                       <table
                                         id="referencer-tabel"
                                         width="100%"
-                                        class="table sorting table-striped table-hover mb-0"
+                                        class="table sorting table-striped table-hover compact mb-0"
                                       >
                                         <thead>
                                           <tr>
@@ -1160,9 +1159,9 @@
                             aria-labelledby="headingFour"
                           >
                             <div class="card-body">
-                              <div class="row mt-3 mb-3">
+                              <div class="row mt-3 mb-0">
                                 <div class="col-sm-6">
-                                  <h4 class="font-weight-bold mt-3 ml-3 mb-3">
+                                  <h5 class="font-weight-bold mt-0 ml-3 mb-3">
                                     <div class="d-flex align-items-center">
                                       <svg
                                         xmlns="http://www.w3.org/2000/svg"
@@ -1178,7 +1177,7 @@
                                       </svg>
                                       <span class="ml-3">Interne noter</span>
                                     </div>
-                                  </h4>
+                                  </h5>
                                   <div class="card ml-3 mr-3">
                                     <div class="card-body">
                                       <p class="ml-3 mr-3 readonly">
@@ -1227,7 +1226,7 @@ of Lorem Ipsum.
                                   </div>
                                 </div>
                                 <div class="col-sm-6">
-                                  <h4 class="font-weight-bold mt-3 ml-3 mb-3">
+                                  <h5 class="font-weight-bold mt-0 ml-3 mb-3">
                                     <div class="d-flex align-items-center">
                                       <svg
                                         xmlns="http://www.w3.org/2000/svg"
@@ -1243,7 +1242,7 @@ of Lorem Ipsum.
                                       </svg>
                                       <span class="ml-3">Publikums noter</span>
                                     </div>
-                                  </h4>
+                                  </h5>
                                   <div class="card ml-3 mr-3">
                                     <div class="card-body">
                                       <p class="ml-3 mr-3 readonly">
@@ -1329,7 +1328,7 @@ of Lorem Ipsum.
                             aria-labelledby="headingFive"
                           >
                             <div class="card-body">
-                              <h4 class="font-weight-bold mt-3 ml-3 mb-3">
+                              <h5 class="font-weight-bold mt-0 ml-3 mb-3">
                                 <div class="d-flex align-items-center">
                                   <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1345,7 +1344,7 @@ of Lorem Ipsum.
                                   </svg>
                                   <span class="ml-3">Afleveringsstatus</span>
                                 </div>
-                              </h4>
+                              </h5>
                               <div class="row mt-3 mb-3">
                                 <div class="col-sm-6">
                                   <ul class="list-group mb-5 mr-3 ml-3">
@@ -1712,8 +1711,8 @@ of Lorem Ipsum.
                               <div
                                 class="d-flex align-items-center justify-content-between mb-3"
                               >
-                                <h4
-                                  class="font-weight-bold mt-3 ml-3 mb-0"
+                                <h5
+                                  class="font-weight-bold mt-0 ml-3 mb-0"
                                   id="arkiveringsversion"
                                 >
                                   <div class="d-flex align-items-center">
@@ -1732,7 +1731,7 @@ of Lorem Ipsum.
 
                                     <span class="ml-3">Arkiveringsversion</span>
                                   </div>
-                                </h4>
+                                </h5>
                                 <button
                                   class="btn btn-outline-primary btn-sm d-flex align-items-center mt-3 ml-3 mr-3 addrow-7"
                                 >
@@ -1761,7 +1760,7 @@ of Lorem Ipsum.
                                     <div class="card-body p-0 m-0">
                                       <table
                                         id="arkiveringsversion-tabel"
-                                        class="table sorting table-hover table-striped mb-0"
+                                        class="table sorting table-hover table-striped compact mb-0"
                                         width="100%"
                                       >
                                         <thead>
@@ -2202,7 +2201,7 @@ versions of Lorem Ipsum.
                                                   >
                                                     <table
                                                       id="hif-tabel-1"
-                                                      class="table sorting table-hover table-striped mb-0"
+                                                      class="table sorting table-hover table-striped compact mb-0"
                                                       width="100%"
                                                     >
                                                       <thead>
@@ -2645,7 +2644,7 @@ versions of Lorem Ipsum.
                                                   >
                                                     <table
                                                       id="hif-tabel-2"
-                                                      class="table sorting table-hover table-striped mb-0"
+                                                      class="table sorting table-hover table-striped compact mb-0"
                                                       width="100%"
                                                     >
                                                       <thead>
@@ -2905,7 +2904,7 @@ versions of Lorem Ipsum.
               <table
                 id=""
                 width="100%"
-                class="table sorting table-hover table-striped mb-0"
+                class="table sorting table-hover table-striped compact mb-0"
               >
                 <thead>
                   <tr>
@@ -3163,9 +3162,9 @@ versions of Lorem Ipsum.
               <div class="card-body p-0">
                 <div class="table-responsive">
                   <table
-                    id=""
+                    id="tilfoejarkivskaber-tabel"
                     width="100%"
-                    class="table sorting table-hover table-striped mb-0"
+                    class="table sorting table-hover table-striped compact mb-0"
                   >
                     <thead>
                       <tr>
