--- a/search/search-arkivskaber.html
+++ b/search/search-arkivskaber.html
@@ -14,7 +14,7 @@
 
   <body class="bg-light">
     <div class="container-fluid">
-      <div class="col-sm-10 col-centered">
+      <div class="col-sm-12 col-centered">
         <nav class="navbar navbar-expand-lg navbar-white">
           <a class="navbar-brand" href="../index.html">
             <svg
@@ -59,7 +59,7 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-10 mt-3 col-centered">
+        <div class="col-12 mt-3 col-centered">
           <ul class="nav nav-tabs">
             <li class="nav-item">
               <a class="nav-link active" href="#">Arkivskaber</a>
@@ -99,7 +99,7 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-10 col-centered">
+        <div class="col-12 col-centered">
           <div class="card special pt-3 pl-3 pr-3 pb-3">
             <div class="card-body">
               <!-- arkivskaber start -->
@@ -188,17 +188,17 @@
     </div>
     <div class="container-fluid mt-3 mb-10">
       <div class="row">
-        <div class="col-10 col-centered">
+        <div class="col-12 col-centered">
           <div class="card bg-white pt-1 pr-4 pl-4 pb-3">
             <div class="card-body">
-              <h4 class="mb-4 ml-1 mt-3">
+              <h4 class="mb-3 ml-1 mt-3">
                 <span class="font-weight-bold">3</span> resultater
               </h4>
               <div class="card">
                 <table
                   id="search"
                   width="100%"
-                  class="table sorting table-hover table-striped"
+                  class="table sorting table-hover table-striped compact"
                 >
                   <thead>
                     <tr>
