--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -14,7 +14,7 @@
 
   <body class="bg-light">
     <div class="container-fluid">
-      <div class="col-sm-10 col-centered">
+      <div class="col-sm-12 col-centered">
         <nav class="navbar navbar-expand-lg navbar-white">
           <a class="navbar-brand" href="/index.html">
             <svg
@@ -60,19 +60,18 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-10 col-centered">
+        <div class="col-12 col-centered">
           <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
             <div class="card-body">
-              <a href="/search/search-arbejdsopgave.html" class="d-flex mb-4"
+              <a href="/search/search-arbejdsopgave.html" class="d-flex mb-2"
                 >« Tilbage</a
               >
-              <span class="badge badge-green badge-pill mt-2 mb-4"
+              <h3 class="font-weight-bold">Min arbejdsopgave <span class="badge badge-green badge-pill ml-2"
                 >Arbejdsopgave</span
-              >
-              <h1 class="font-weight-bold">Min arbejdsopgave</h1>
-              <h3 class="text-secondary mb-5">
+              ></h3>
+              <h5 class="text-secondary mb-3">
                 Oprettet: 10. juni 2002 &nbsp;&bull;&nbsp; Lukket: 15. juni 2002
-              </h3>
+              </h5>
 
               <div class="container-fluid">
                 <div class="row mb-3 mt-3">
@@ -80,7 +79,7 @@
                     <div
                       class="card-header d-flex align-items-center justify-content-between"
                     >
-                      <h5 class="mb-0">Min arbejdsopgave</h5>
+                      <h6 class="mb-0">Min arbejdsopgave</h6>
                       <div class="float-right readonly">
                         <button class="btn btn-primary readonly edit">
                           Rediger
@@ -99,7 +98,7 @@
                     <div class="card-body pb-10">
                       <div class="row">
                         <div class="col-sm-6">
-                          <h4 class="font-weight-bold mt-4 ml-3 mb-4">
+                          <h5 class="font-weight-bold mt-3 ml-3 mb-3">
                             <div class="d-flex align-items-center">
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -115,7 +114,7 @@
                               </svg>
                               <span class="ml-3">Detaljer</span>
                             </div>
-                          </h4>
+                          </h5>
                           <ul class="list-group mb-5 mr-3 ml-3">
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
@@ -205,7 +204,7 @@ ll@sa.dk
                           </ul>
                         </div>
                         <div class="col-sm-6">
-                          <h4 class="font-weight-bold mt-4 ml-3 mb-4">
+                          <h5 class="font-weight-bold mt-3 ml-3 mb-3">
                             <div class="d-flex align-items-center">
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -222,7 +221,7 @@ ll@sa.dk
 
                               <span class="ml-3">Adgang</span>
                             </div>
-                          </h4>
+                          </h5>
                           <ul class="list-group mb-5 mr-3 ml-3">
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
@@ -280,13 +279,13 @@ ll@sa.dk
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-12 readonly">
                                   <button
-                                    class="btn btn-outline-danger readonly"
+                                    class="btn btn-outline-danger btn-sm readonly"
                                     data-toggle="modal"
                                     data-target="#lukopgave"
                                   >
                                     Luk opgave
                                   </button>
-                                  <button class="btn btn-success opentask">
+                                  <button class="btn btn-success opentask btn-sm">
                                     Gen-åben opgave
                                   </button>
                                 </div>
@@ -301,7 +300,7 @@ ll@sa.dk
                           <div
                             class="d-flex align-items-center justify-content-between mb-3 mt-3"
                           >
-                            <h4 class="font-weight-bold ml-3 mb-0">
+                            <h5 class="font-weight-bold ml-3 mb-0">
                               <div class="d-flex align-items-center">
                                 <svg
                                   xmlns="http://www.w3.org/2000/svg"
@@ -318,7 +317,7 @@ ll@sa.dk
 
                                 <span class="ml-3">Eksemplarer</span>
                               </div>
-                            </h4>
+                            </h5>
                             <button
                               class="btn btn-outline-primary d-flex align-items-center mr-3"
                             >
@@ -353,7 +352,7 @@ ll@sa.dk
                               <table
                                 id="eksemplar-tabel"
                                 width="100%"
-                                class="table table-hover sorting table-striped mb-0"
+                                class="table table-hover sorting table-striped mb-0 compact"
                               >
                                 <thead>
                                   <tr>
@@ -505,7 +504,7 @@ ll@sa.dk
             </button>
           </div>
           <div class="modal-body">
-            <div class="card bg-light pt-3 pb-3 mb-3">
+            <div class="card bg-light pt-1 pb-1 mb-3">
               <div class="card-body">
                 <form>
                   <div class="container-fluid">
@@ -600,7 +599,7 @@ ll@sa.dk
                   <table
                     id="tilknyteks-tabel"
                     width="100%"
-                    class="table sorting table-hover table-striped mb-0"
+                    class="table sorting table-hover table-striped mb-0 compact"
                   >
                     <thead>
                       <tr>
