--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -61,15 +61,15 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-centered">
-          <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
+          <div class="card bg-white pt-2 pr-3 pl-3 pb-5">
             <div class="card-body">
-              <a href="/search/search-arkivskaber.html" class="d-flex mb-4"
+              <a href="/search/search-arkivskaber.html" class="d-flex mb-2"
                 >« Tilbage</a
               >
-              <h5 class="text-secondary">Frederiksberg Politi               <span class="badge badge-purple badge-pill ml-2"
+              <h3 class="font-weight-bold">Ordenspolitiet, 1919 - 2006</h3>
+              <h5 class="text-secondary mb-3">Frederiksberg Politi <span class="badge badge-purple badge-pill ml-2"
                 >Arkivskaber</span
               ></h5>
-              <h3 class="mb-4 font-weight-bold">Ordenspolitiet, 1919 - 2006</h3>
               <ul class="nav nav-tabs">
                 <li class="nav-item">
                   <a
