--- a/fif.html
+++ b/fif.html
@@ -14,7 +14,7 @@
 
   <body class="bg-light">
     <div class="container-fluid">
-      <div class="col-sm-10 col-centered">
+      <div class="col-sm-12 col-centered">
         <nav class="navbar navbar-expand-lg navbar-white">
           <a class="navbar-brand" href="/index.html">
             <svg
@@ -60,17 +60,17 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-10 col-centered">
-          <div class="card bg-white pt-3 pr-4 pl-4 pb-8">
+        <div class="col-12 col-centered">
+          <div class="card bg-white pt-2 pr-2 pl-2 pb-4">
             <div class="card-body">
-              <span class="badge badge-warning badge-pill mt-3 mb-4">FIF</span>
-              <h1 class="font-weight-bold mb-4">
+              <span class="badge badge-warning badge-pill mt-3 mb-2">FIF</span>
+              <h3 class="font-weight-bold mb-2">
                 Fremfindingsidentikatorformat
-              </h1>
-              <div class="row mt-3 mb-3">
+              </h3>
+              <div class="row mt-1 mb-1">
                 <div class="col-sm-6">
                   <div class="card bg-light mb-4 mt-3">
-                    <div class="card-body p-lg-4">
+                    <div class="card-body p-lg-3">
                       <div class="form-group">
                         <label class="font-weight-semibold" for="betegnelse"
                           >Betegnelse </label
@@ -89,7 +89,7 @@
                 <div class="card-body p-0 m-0">
                   <table
                     id="hif-modal-tabel"
-                    class="table sorting table-hover table-striped mb-0"
+                    class="table sorting table-hover table-striped mb-0 compact"
                     width="100%"
                   >
                     <thead>
@@ -425,7 +425,7 @@
                         <table
                           id=""
                           width="100%"
-                          class="table sorting table-hover table-striped mb-0"
+                          class="table sorting table-hover table-striped mb-0 compact"
                         >
                           <thead>
                             <tr>
@@ -462,7 +462,7 @@
                         <table
                           id=""
                           width="100%"
-                          class="table sorting table-hover table-striped mb-0"
+                          class="table sorting table-hover table-striped mb-0 compact"
                         >
                           <thead>
                             <tr>
